# another-c-cpp-project-c23-cpp23

./: CMakeLists.txt  main.cpp
cheader/: CMakeLists.txt  library1_c.c  library1_c.h
cppheader/: CMakeLists.txt  library1_cpp.cpp  library1_cpp.hpp
